--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
-name: memcached_cache
-version: 0.1.1
+name: mem_cache_store
+version: 0.2.0
 
 authors:
   - Anton Maminov <anton.maminov@gmail.com>
