--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: mem_cache_store
-version: 0.2.1
+version: 0.2.2
 
 authors:
   - Anton Maminov <anton.maminov@gmail.com>
@@ -7,7 +7,7 @@ authors:
 dependencies:
   cache:
     github: crystal-cache/cache
-    version: ~> 0.12.0
+    version: ">= 0.12.0"
   memcached:
     github: comandeo/crystal-memcached
     branch: develop
