--- a/shard.yml
+++ b/shard.yml
@@ -7,7 +7,8 @@ authors:
 dependencies:
   cache:
     github: crystal-cache/cache
-    version: "~> 0.15.1"
+    branch: cache-v2
+    # version: "=> 1.0.0"
   memcached:
     github: comandeo/crystal-memcached
     branch: develop
