--- a/shard.yml
+++ b/shard.yml
@@ -7,7 +7,7 @@ authors:
 dependencies:
   cache:
     github: crystal-cache/cache
-    version: "=> 1.0.0"
+    version: ">= 1.0.0"
   memcached:
     github: comandeo/crystal-memcached
     branch: develop
